--- a/lamborghini/css/style.css
+++ b/lamborghini/css/style.css
@@ -266,3 +266,40 @@ margin: 10px 0;
 .evo__descr-list dd{
   text-transform: uppercase;
 }
+
+.evo-white__inner {
+  padding-top: 125px;
+}
+
+.evo-white__text {
+  margin-bottom: 30px;
+}
+
+.evo-white__text:first-child {
+  max-width: 285px;
+}
+
+.evo-white__text:nth-child(2) {
+  max-width: 437px;
+}
+.evo-white__text:nth-child(3) {
+  max-width: 590px;
+}
+
+.evo-white__video {
+  margin-top: 100px;
+  background-image: url(../images/evo-video.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.evo-white__video-link span{
+  display: block;
+  color: #fff;
+}
