--- a/lamborghini/css/style.css
+++ b/lamborghini/css/style.css
@@ -231,6 +231,30 @@ margin: 10px 0;
   color: #fff
 }
 
+.evo-black__inner {
+  position: relative;
+}
+
+.evo-black__inner::before{
+  content: '';
+  background-image: url(../images/dec-1.svg);
+  width: 185px;
+  height: 213px;
+  position: absolute;
+  top: 210px;
+  left: -140px;
+}
+
+.evo-black__inner::after{
+  content: '';
+  background-image: url(../images/dec-2.svg);
+  width: 498px;
+  height: 572px;
+  position: absolute;
+  top: 290px;
+  left: -50px;
+}
+
 .evo-black__info {
   display: flex;
   justify-content: space-between;
@@ -255,6 +279,8 @@ margin: 10px 0;
 .evo-black__img {
   display: block;
   margin: 170px auto 60px;
+  position: relative;
+  z-index: 1;
 }
 
 .evo__descr-list {
@@ -269,6 +295,27 @@ margin: 10px 0;
 
 .evo-white__inner {
   padding-top: 125px;
+  position: relative;
+}
+
+.evo-white__inner::before{
+  content: '';
+  background-image: url(../images/dec-3.png);
+  width: 274px;
+  height: 257px;
+  position: absolute;
+  top: -25px;
+  left: 340px;
+}
+
+.evo-white__inner::after{
+  content: '';
+  background-image: url(../images/dec-4.png);
+  width: 324px;
+  height: 311px;
+  position: absolute;
+  top: 120px;
+  left: 590px;
 }
 
 .evo-white__text {
