--- a/lamborghini/css/style.css
+++ b/lamborghini/css/style.css
@@ -18,6 +18,10 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
 .big-container {
   max-width: 1220px;
   padding: 0 10px;
@@ -350,3 +354,149 @@ margin: 10px 0;
   display: block;
   color: #fff;
 }
+
+.blog {
+  margin-bottom: 100px;
+}
+
+.blog__title {
+  font-weight: 300;
+  font-size: 32px;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.blog__item-img {
+  margin-bottom: 20px;
+}
+
+.blog__item-title {
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  min-height: 46px;
+}
+
+.blog__item-text {
+  margin-bottom: 10px;
+}
+
+.blog__item-link {
+  font-size: 12px;
+  color: #363636;
+}
+
+.blog__slider {
+position: relative;
+padding-top: 50px;
+margin-bottom: 100px;
+}
+
+.blog__button {
+ position: absolute;
+ top: 0;
+ cursor: pointer;
+ left: 50%;
+}
+
+.swiper-button-left {
+ transform: translateX(-41px); 
+}
+
+.swiper-button-right {
+transform: translateX(8px);
+}
+
+.blog__quote {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.blog__quote-box {
+  flex-basis: 434px;
+}
+
+.blockquote {
+  margin-bottom: 30px;
+}
+
+.blockquote__name {
+ font-weight: 700;
+ margin-bottom: 10px;
+ font-style: normal;
+}
+
+.blockquote__name span {
+display: block;
+margin-bottom: 3px;
+font-size: 12px;
+color: #9f6b08;
+}
+
+.blockquote__text {
+  font-style: italic;
+}
+
+.footer {
+  padding: 100px 0 80px;
+  background-color: #363636;
+  color: #fff;
+}
+
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.footer__title {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+
+.footer__info-item {
+  margin-bottom: 50px;
+}
+
+.footer__info-item dt,
+.footer__address-title {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.footer__info-item dd {
+  margin-bottom: 10px;
+}
+
+.social-list {
+  display: flex;
+  gap: 0 20px;
+  align-items: center;
+}
+
+.footer__address {
+  flex-basis: 462px;
+}
+
+#map {
+  height: 250px;
+}
+
+.footer__address-text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.footer__bottom {
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
