oculus: header + section top

--- a/oculus/app/scss/_vars.scss
+++ b/oculus/app/scss/_vars.scss
@@ -1,9 +1,11 @@
 %helv-400 {
-  font-family: "helvetica", sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: 400;
 }
 
 %helv-500 {
-  font-family: "helvetica-bold", sans-serif;
+  font-family: "Helvetica-bold", sans-serif;
   font-weight: 500;
 }
+
+$font-color: #5C5C5E;
