--- a/oculus/app/scss/_fonts.scss
+++ b/oculus/app/scss/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: "helvetica-bold";
+  font-family: "Helvetica-bold";
   font-weight: 500;
   font-style: normal;
-  src: local("helvetica-bold"),
+  src: local("Helvetica-bold"),
     url("../fonts/helvetica-bold.woff2") format("woff2"),
     url("../fonts/Helvetica-Bold.ttf") format("tff")
 }
 
 @font-face {
-  font-family: "helvetica";
+  font-family: "Helvetica";
   font-weight: 400;
   font-style: normal;
-  src: local("helvetica"),
+  src: local("Helvetica"),
     url("../fonts/helvetica.woff2") format("woff2"),
     url("../fonts/Helvetica.ttf") format("tff")
 }
