--- a/oculus/app/scss/_global.scss
+++ b/oculus/app/scss/_global.scss
@@ -1,3 +1,6 @@
+@import 'vars';
+@import 'fonts';
+
 html{
   box-sizing: border-box;
 }
@@ -19,4 +22,37 @@ li{
 
 img{
   max-width: 100%;
+}
+
+body {
+  @extend %helv-400;
+  font-size: 16px;
+  line-height: 1.15;
+  color: $font-color;
+}
+
+.container {
+  max-width: 1200px - 20px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.buy-btn {
+  cursor: pointer;
+  border: none;
+  background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  display: flex;
+  padding: 1px;
+  text-transform: uppercase;
+  
+
+  &__text {
+    color: #F6F4F5;
+    padding: 20px 110px;
+  }
+
+  &__prise {
+    background-color: #F6F4F5;
+    padding: 20px 105px;
+  }
 }
