--- a/oculus/app/scss/styles.scss
+++ b/oculus/app/scss/styles.scss
@@ -5,13 +5,19 @@
 @import 'global';
 
 
+.section-title {
+  font-weight: 400;
+  line-height: 18px;
+  padding-right: 20px;
+}
+
 .header {
   border-bottom: 1px solid #CACAD6;
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   height: 80px;
 }
@@ -21,8 +27,13 @@
   gap: 20px;
 }
 
+.logo {
+  justify-self: center;
+}
+
 .basket {
   position: relative;
+  justify-self: end;
 
   span {
     width: 15px;
@@ -53,6 +64,7 @@
   margin-bottom: 10px;
   font-size: 96px;
   line-height: 110px;
+  font-weight: 400;
 }
 
 .subtitle {
@@ -70,4 +82,103 @@
 .buy-text {
   padding-top: 6px;
   font-size: 13px;
+}
+
+.features {
+  padding: 100px 0;
+  
+  &__titles {
+    display: flex;
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    flex-basis: 300px;
+  }
+
+  &__text {
+    max-width: 330px;
+    text-transform: uppercase;
+    font-size: 36px;
+    line-height: 41px;
+    margin-bottom: 2px;
+    background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.tabs {
+  display: grid;
+  grid-template-columns: 300px auto;
+
+  &__btn {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+  }
+
+  &__btn-item {
+    font-weight: 700;
+    line-height: 18px;
+
+    &--active {
+      color: #070707;
+    }
+  }
+
+  &__content {
+    position: relative;
+    min-height: 300px;
+
+    &-item {
+      display: grid;
+      grid-template-columns: auto 280px;
+      grid-template-rows: auto 150px;
+      gap: 40px;
+      opacity: 0;
+      position: absolute;
+
+        &--active {
+          opacity: 1;
+        }
+
+      h3 {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 28px;
+        margin-bottom: 10px;
+      }
+    }
+
+    &-img {
+      grid-row: 1/-1;
+    }
+  }
+}
+
+.video {
+  height: 150px;
+  width: 280px;
+  background-image: url(../images/content-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: flex-start;
+  padding: 9px 10px;
+  grid-column: 2/3;
+
+  &__btn {
+    margin-left: 22px;
+  }
+
+  span {
+    font-size: 13px;
+    line-height: 15px;
+    color: #F6F4F5;
+  }
 }
