--- a/oculus/app/scss/styles.scss
+++ b/oculus/app/scss/styles.scss
@@ -139,6 +139,7 @@
       gap: 40px;
       opacity: 0;
       position: absolute;
+      transition: opacity .3s;
 
         &--active {
           opacity: 1;
