--- a/oculus/app/scss/styles.scss
+++ b/oculus/app/scss/styles.scss
@@ -1,9 +1,8 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
+@import "vars";
+@import "fonts";
+@import "reset";
 
-@import 'global';
-
+@import "global";
 
 .section-title {
   font-weight: 400;
@@ -12,7 +11,7 @@
 }
 
 .header {
-  border-bottom: 1px solid #CACAD6;
+  border-bottom: 1px solid #cacad6;
 }
 
 .nav {
@@ -86,7 +85,7 @@
 
 .features {
   padding: 100px 0;
-  
+
   &__titles {
     display: flex;
     margin-bottom: 20px;
@@ -98,13 +97,8 @@
 
   &__text {
     max-width: 330px;
-    text-transform: uppercase;
-    font-size: 36px;
-    line-height: 41px;
     margin-bottom: 2px;
-    background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    @extend %title-with-gradient;
   }
 }
 
@@ -139,11 +133,11 @@
       gap: 40px;
       opacity: 0;
       position: absolute;
-      transition: opacity .3s;
+      transition: opacity 0.3s;
 
-        &--active {
-          opacity: 1;
-        }
+      &--active {
+        opacity: 1;
+      }
 
       h3 {
         font-weight: 400;
@@ -180,6 +174,71 @@
   span {
     font-size: 13px;
     line-height: 15px;
-    color: #F6F4F5;
+    color: #f6f4f5;
+  }
+}
+
+.games {
+  margin-bottom: 100px;
+
+  &__title {
+    margin-bottom: 50px;
+  }
+
+  &__inner {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.games__descr {
+  padding-right: 10px;
+  &-title{
+    text-transform: uppercase;
+    @extend %title-with-gradient;
+    margin-bottom: 10px;
+  }
+
+  &-text {
+    margin-bottom: 24px;
+  }
+
+  &-link {
+    display: inline-block;
+    @extend %dradient-text;
+    font-weight: 700;
+    text-transform: uppercase;
+    width: 225px;
+    padding: 16px 15px;
+    border: 1px solid #BC10D8;
+    text-align: center;
+  }
+}
+
+.games__item {
+  border: 1px solid #BC10D8;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+
+  &-img {
+    margin-bottom: 10px;
+  }
+
+  &-title {
+    font-size: 24px;
+    line-height: 28px;
+    color: #070707;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  &-text {
+    margin-bottom: 40px;
+  }
+
+  &-link {
+    @extend %dradient-text;
+    margin-top: auto;
   }
 }
